<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator DM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnFifteen">15%</string>
    <string name="btnTen">10%</string>
    <string name="btnTwenty">20%</string>
    <string name="prompt_entry">Enter Bill Subtotal</string>
    <string name="result_place_holder">tip will appear here</string>

</resources>
